--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -9,6 +9,7 @@
   position: relative;
 
   .hero-frame {
+    border-radius: 7px;
     position: relative;
     width: 90vw;
     max-width: 1200px;
@@ -18,7 +19,7 @@
     margin-bottom: 10vh;
 
     &:hover .area-designer {
-      @media (min-width: $bp-tablet + 1) {
+      @media (min-width: ($bp-tablet + 1px)) {
         opacity: 1;
       }
     }
@@ -33,7 +34,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 50px;
+    padding-bottom: 2rem;
 
     &-title-main {
       font-weight: 400;
@@ -91,12 +92,14 @@
   }
 
   .hero-content {
+    background-color: $color-text-muted;
+    border-radius: 7px;
     z-index: 3;
-    max-width: 380px;
+    max-width: 400px;
     padding: 20px;
 
     .hero-title-sub {
-      font-size: 3rem;
+      font-size: 2.5rem;
       white-space: nowrap;
       @media (max-width: $bp-tablet) {
         font-size: 2rem;
@@ -104,7 +107,7 @@
     }
 
     .hero-description {
-      font-size: 1.1rem;
+      font-size: 1.3rem;
       line-height: 1.8;
       @media (max-width: $bp-tablet) {
         display: none;
